--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-font": "^12.0.10",
     "expo-image-picker": "^15.0.7",
     "expo-linear-gradient": "^13.0.2",
+    "expo-location": "~17.0.1",
     "expo-notifications": "^0.28.19",
     "expo-print": "^13.0.1",
     "expo-sharing": "^12.0.1",
@@ -43,6 +44,7 @@
     "react-native-event-listeners": "^1.0.7",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-link": "^4.1.0",
+    "react-native-maps": "1.14.0",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-pdf": "^6.7.5",
     "react-native-reanimated": "^3.10.1",
