--- a/app.json
+++ b/app.json
@@ -25,7 +25,15 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyAn6o61kCZgJbvOuwmFOf4Zp969CqtThRA"
+        }
+      },
+      "permissions": ["ACCESS_FINE_LOCATION", "ACCESS_COARSE_LOCATION"]
+
+      
     },
     "web": {
       "favicon": "./assets/icon.png"
